--- a/dabang_clone/package.json
+++ b/dabang_clone/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "connected-react-router": "6.8.0",
     "history": "4.10.1",
     "immer": "^9.0.3",
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch ./src/shared/mock_api.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
