--- a/dabang_clone/package.json
+++ b/dabang_clone/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "connected-react-router": "6.8.0",
+    "date-fns": "^2.22.1",
     "history": "4.10.1",
     "immer": "^9.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-nice-dates": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
