--- a/dabang_clone/package.json
+++ b/dabang_clone/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.22.1",
     "history": "4.10.1",
     "immer": "^9.0.3",
+    "json-server": "^0.16.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -25,6 +26,7 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "server": "^1.0.34",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
