--- a/dabang_clone/package.json
+++ b/dabang_clone/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aws-sdk": "^2.949.0",
     "axios": "^0.21.1",
     "connected-react-router": "6.8.0",
     "history": "4.10.1",
